--- a/Angular/src/app/main/services/services.component.html
+++ b/Angular/src/app/main/services/services.component.html
@@ -34,12 +34,12 @@
             <div class="content">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-xs-12 col-sm-6" *ngIf="services?.DocumentsRequired">
                             <div class="card">
                                 <a class="img-card" href="#">
                                     <img src="https://www.myaccountsconsultant.com/assets/images/page/Sign-contract.jpg" />
                                 </a>
-                                <div class="card-content">
+                                <div class="card-content" >
                                     <h4 class="card-title pl-3">
                                         <a> Documents Required
                                       </a>
@@ -77,7 +77,7 @@
                                 </div> -->
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6">
+                        <div class="col-xs-12 col-sm-6" *ngIf="services?.Amount">
                             <div class="card">
 
                                 <div class="card-content">
