header changes updated

--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -1,50 +1,44 @@
-<div class="top-bar">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-7">
-				<div class="login"><a href="#" class="login-btn"><i class="fa fa-phone"></i><span class="d-none d-md-inline-block">7207001410</span></a><a href="#" class="signup-btn"><i class="fa fa-envelope"></i><span class="d-none d-md-inline-block">siva@gmail.com</span></a></div>
-			</div>
-			<div class="col-lg-5">
-				<div class="">
-					<!-- <ul class="list-inline contact-info d-block d-md-none">
-			  <li class="list-inline-item"><a href="#"><i class="fa fa-phone"></i></a></li>
-			  <li class="list-inline-item"><a href="#"><i class="fa fa-envelope"></i></a></li>
-			</ul>
--->
-					<ul class="social-custom list-inline float-right">
-						<li class="list-inline-item"><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li class="list-inline-item"><a href="#"><i class="fa fa-envelope"></i></a></li>
-					</ul>
+<header>
+    <nav id="main-navbar" class="navbar navbar-default navbar-fixed-top">
+        <div class="container navbar-container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+                <a class="navbar-brand" href="#">Online Tax</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown"><a href="#">Random</a>
+                        <ul class="dropdown-content">
+                            <li>dropdown</li>
+                            <li>dropdown</li>
+                            <li>dropdown</li>
+                            <li>dropdown</li>
+                        </ul>
+                    </li>
+                    <li><a href="#about">Happiness</a></li>
+                    <li><a href="#portfolio">Hacking</a></li>
+                    <li><a href="#contact">News</a></li>
+                    <li><a href="#blog">Technology</a></li>
 
+                </ul>
+            </div>
+            <div class="top-social">
+                <ul id="top-social-menu">
+                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa fa-envelope"></i></a></li>
+                    <li><a href="#"><i class="fa fa-phone"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</header>
+<!-- 
+<section class="full-width-img">
 
-				</div>
-			</div>
-
-		</div>
-	</div>
-</div>
-<nav class="navbar navbar-default">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-		<span class="sr-only">Toggle navigation</span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-		<span class="icon-bar"></span>
-	  </button>
-			<a class="navbar-brand" href=""></a>
-		</div>
-		<div id="navbar" class="collapse navbar-collapse float-right">
-			<ul class="nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Services</a></li>
-				<li><a href="#about">Tools</a></li>
-				<li><a href="#contact">Contact</a></li>
-				<li><a href="#about">Pricing</a></li>
-				<li><a href="#contact">Tax</a></li>
-			</ul>
-		</div>
-	</div>
-</nav>
+</section> -->
