--- a/Angular/src/styles.scss
+++ b/Angular/src/styles.scss
@@ -77,11 +77,11 @@ body {
 }
 
 .bg-img {
-    background-image: url(https://www.myaccountsconsultant.com/assets/images/slider/Professional-Accounting-Services.jpg);
+    background-image: url(http://www.uptra.in/images/banner/image-3.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-color: #999;
-    height: 522px;
+    height: 650px;
     position: relative;
 }
 
@@ -117,6 +117,7 @@ body {
     width: 25%;
     float: left;
     margin-top: 25px;
+    text-align: center;
 }
 
 .text-vision {
@@ -125,7 +126,7 @@ body {
 }
 
 .text-vision p {
-    font-size: 15px;
+    font-size: 14px;
     font-weight: 400;
     margin-top: 10px;
     margin-bottom: 15px;
@@ -181,7 +182,7 @@ body {
 }
 
 .notice-section-sm {
-    padding: 10px 0;
+    padding: 20px 0;
     background-image: url(https://www.myaccountsconsultant.com/assets/images/bg/acc-lower-image.jpg) !important;
 }
 
