Added new components

--- a/Angular/src/app/main/services/services.component.html
+++ b/Angular/src/app/main/services/services.component.html
@@ -99,7 +99,7 @@
                                         <div class="checkbox">
                                             <label>
                                               <input type="checkbox" formControlName="userTerms"> Before Proceeding, you agree to the <a data-toggle="modal" 
-                                              data-target="#terms-condition" >Terms and Conditions</a>
+                                              data-target="#terms-condition" [routerLink]="['/termsandconditions']">Terms and Conditions</a>
                                             </label>
                                         </div>
                                         <div class="row">
