--- a/Angular/src/app/main/home/home.component.html
+++ b/Angular/src/app/main/home/home.component.html
@@ -1,4 +1,5 @@
-<div class="bg-img">
+<!-- <div class="bg-img">
+
     <div class="wrapper container">
         <div class="message">
             <h1>Online Accounting Services</h1>
@@ -7,7 +8,18 @@
             <h3>Quality services at feasible price.</h3>
         </div>
     </div>
-</div>
+</div> -->
+<carousel 
+    [objectFit]="'cover'"
+    [cellWidth]="'100%'"
+    [autoplay]="true"
+    [images]="images"
+    [dots]="true"
+    [height]="500"
+    [loop]="true"
+    [overflowCellsLimit]="1"
+    style=" background-color: #999;position:relative;">
+</carousel>
 
 <section class="service-section">
     <div class="container">
@@ -16,9 +28,6 @@
                 <h2>{{content.About.title}}</h2>
                 <div class="text" [innerHtml]="content.About.description">
 
-                </div>
-                <div>
-                    <button class="primary-button button-sm mt-15-xs btn">Start e-Filing</button>
                 </div>
             </div>
             <div class="col-lg-6">
@@ -29,95 +38,15 @@
 
         </div>
         <div class="row mt-4">
-            <div class="col-md-4">
+            <div class="col-md-4" *ngFor="let service of content.services.servicesList">
                 <div class="need-help">
-                    <div class="header-div">
-                        <div class="main_headingbox">File Returns in 5 Minutes</div>
-                        <div class="sub_headingbox">Upload your form 16 &amp; file income tax return yourself in just 5 minutes</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
-                    </div>
-                    <div class="clear-both">
-                        <div class="left_img"><img alt="bullet" src="../../../assets/images/file_return_points.webp"></div>
-                        <div class="right_textbox">Quick &amp; Easy Tax Return filing</div>
+                    <div class="header-div text-vision">
+                        <a href="javascript:void(0)" class="main_headingbox" (click)="readMore(service)">{{service.title}}</a>
+                        <div class="sub_headingbox">{{service.description}}</div>
                     </div>
                     <button type="button" class="btn btn-primary mt-4">
-                        <div class="usetools_text">Income Tax Calculator</div>
+                        <div class="usetools_text">Click here to File</div>
                         </button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="need-help">
-                    <div class="header-div">
-                        <div class="main_headingbox">File Returns in 5 Minutes</div>
-                        <div class="sub_headingbox">Upload your form 16 &amp; file income tax return yourself in just 5 minutes</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                    <div class="white_box_CA">
-                        <div class="divleft_CA_other">Salary + Interest Income</div>
-                        <div class="divright_CA_other">₹ 999</div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="need-help">
-                    <div class="header-div">
-                        <div class="main_headingbox">File Returns in 5 Minutes</div>
-                        <div class="sub_headingbox">Upload your form 16 &amp; file income tax return yourself in just 5 minutes</div>
-                    </div>
-                    <button type="button" class="btn btn-success useful" ui-sref="incomeTaxCalulator">
-                        <div class="usetools_img"><img alt="bullet" src="../../../assets/images/generate-rent-receipt.webp"></div>
-                        <div class="usetools_text">Income Tax Calculator</div>
-                        </button>
-                    <button type="button" class="btn btn-success useful" ui-sref="incomeTaxCalulator">
-                            <div class="usetools_img"><img alt="bullet" src="../../../assets/images/generate-rent-receipt.webp"></div>
-                            <div class="usetools_text">Income Tax Calculator</div>
-                            </button>
-                    <button type="button" class="btn btn-success useful" ui-sref="incomeTaxCalulator">
-                                <div class="usetools_img"><img alt="bullet" src="../../../assets/images/generate-rent-receipt.webp"></div>
-                                <div class="usetools_text">Income Tax Calculator</div>
-                                </button>
-                    <button type="button" class="btn btn-success useful" ui-sref="incomeTaxCalulator">
-                                    <div class="usetools_img"><img alt="bullet" src="../../../assets/images/generate-rent-receipt.webp"></div>
-                                    <div class="usetools_text">Income Tax Calculator</div>
-                                    </button>
                 </div>
             </div>
         </div>
@@ -125,12 +54,12 @@
 </section>
 <section class="choose">
     <div class="text-center service-header">
-        <h3>{{content.services.title}}</h3>
-        <p>{{content.services.description}}</p>
+        <h3>{{content.newBusiness.title}}</h3>
+        <p>{{content.newBusiness.description}}</p>
     </div>
     <div class="container mt-4">
         <div class="row ml-0 mr-0">
-            <div class="col-md-6 col-sm-12 pt-4" *ngFor="let service of content.services.servicesList">
+            <div class="col-md-6 col-sm-12 pt-4" *ngFor="let service of content.newBusiness.servicesList">
                 <div class="">
                     <div class="icon-box">
                         <img src="https://www.myaccountsconsultant.com/assets/images/logos/bookkeeping.png" width="60" height="60">
