changes in header

--- a/Angular/src/app/header/header.component.html
+++ b/Angular/src/app/header/header.component.html
@@ -12,7 +12,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown"><a href="#">Random</a>
+                    <li class="dropdown"><a href="#">Staring a New Business</a>
                         <ul class="dropdown-content">
                             <li>dropdown</li>
                             <li>dropdown</li>
@@ -20,10 +20,9 @@
                             <li>dropdown</li>
                         </ul>
                     </li>
-                    <li><a href="#about">Happiness</a></li>
-                    <li><a href="#portfolio">Hacking</a></li>
-                    <li><a href="#contact">News</a></li>
-                    <li><a href="#blog">Technology</a></li>
+                    <li><a href="#about">Income Tax Filing</a></li>
+                    <li><a href="#portfolio">GST Registration</a></li>
+                    <li><a href="#contact">Others</a></li>
 
                 </ul>
             </div>
